[project]
name = "termgraph"
version = "1.3.9"
description = "terminal graphing"
readme = "README.md"
authors = [
    { name = "Erik Wybouw", email = "erik.wybouw@telenetgroup.be" },
    { name = "mkaz", email = "marcus@mkaz.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
termgraph = "termgraph.termgraph:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
